2255: Keep additional issue marker updated
Reviewed-by: erikj